2011-02-26   D. V. Wiebe <getdata@ketiltrout.net>   svn:507
	* m4/python.m4 m4/encoding.m4 m4/idl.m4 configure.ac: Fix double quoting
	of brackets.
	* m4/win32.m4 m4/idl.m4: Fix some non-critical errors for OS X 10.5.

	* src/configure.ac: Added --with-module-dir.
	* src/Makefile.am: Install modules in $moduledir.  -DGETDATA_MODULEDIR.
	* src/encoding.c (_GD_MissingFramework): Look for modules in
	GETDATA_MODULEDIR, but fall back to the default searchpath if that fails.
	Also removed support for unversioned modules.

	* bindings/python/test/big_test.py: Instead of whining, just delete the
	dirfile at the end.

	* src/encoding.c (_GD_MissingFramework): Release the mutex and zero
	_gd_ef[].provides on failure to find a module.

2010-12-13   Peter Kümmel <syntheticpp@gmx.net> svn 499 - 504
	* cmake folder: CMake build system for Windows using MinGW or MS Visual Studio
	* src/msvc: files not available in MSVC, patched MinGW files
	* src/getdata.h.in: patches for MinGW and MSVC
	
2010-12-08   D. V. Wiebe <getdata@ketiltrout.net>   svn:498
	* src/getdata.h.in: Add meaningless stuff after #undef's to appease msys's
	config.status.

2010-12-08   D. V. Wiebe <getdata@ketiltrout.net>   svn:497
	* m4/encoding.m4: Replace TEST_<foo> AM_CONDITIONALs with a preprocessor
	symbols.
	* test/Makefile.am: Remove TEST_<foo> conditionals.
	* test/gzip_move_from.c test/bzip_get_get.c test/gzip_get_get.c
	test/gzip_get.c test/xz_nframes.c test/slim_nframes.c test/lzma_nframes.c
	test/slim_get.c test/lzma_get.c test/bzip_move_from.c test/xz_get.c: If
	helper binaries are unavailable, just skip these tests.

	* test/test.h: MSVC mkdir() patch from Peter Kümmel.

2010-12-07   D. V. Wiebe <getdata@ketiltrout.net>   svn:494
	MSVC fixes from Peter:

	* test/*.c: Remove unistd.h include.  (It will be included in internal.h
	when needed.)

	* src/flush.c: No need to make the GD_VERS_* macros long longs.

	* src/putdata.c (_GD_DoConstOut): Cast to char* before performing pointer
	arithmetic.
